TrialoftheTitansPackage/main/default/objects/Hero_Assessment__c/Hero_Assessment__c.object-meta.xml
<CustomObject>
    <label>Hero Assessment</label>
    <nameField>
        <displayFormat>HA-{0000}</displayFormat>
        <label>Hero Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hero Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>