TrialoftheTitansPackage/main/default/objects/Hero_Assessment__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <description>Relating Hero Assessment to Assessment</description>
    <label>Assessment</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Hero Assessments</relationshipLabel>
    <relationshipName>Hero_Assessments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>