TrialoftheTitansPackage/main/default/objects/Hero_Assessment__c/fields/Hero__c.field-meta.xml
<CustomField>
    <fullName>Hero__c</fullName>
    <label>Hero</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hero Assessments</relationshipLabel>
    <relationshipName>Hero_Assessments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>