TrialoftheTitansPackage/main/default/objects/Hero_Assessment__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Details for score given</description>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>