TrialoftheTitansPackage/main/default/objects/Hero_Assessment__c/fields/Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score__c</fullName>
    <description>Score for assessment.</description>
    <label>Overall Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>